# life

./: .gitignore  CMakeLists.txt  README.md
src/: Grid.cpp  Grid.h  GridDisplay.cpp  GridDisplay.h  GridDisplayTerm.cpp  GridDisplayTerm.h  StateMachine.cpp  StateMachine.h  StatePalette.cpp  StatePalette.h  main.cpp
